--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,13 @@ spring.application.name=Online Help Desk
 server.port = 9090
 
 #JDBC Properties
-spring.datasource.url=jdbc:mysql://localhost:3306/services
-spring.datasource.username=root
-spring.datasource.password=
-spring.jpa.hibernate.ddl-auto = update
+spring.datasource.url=jdbc:mysql://sql12.freesqldatabase.com:3306/sql12782121
+spring.datasource.username=sql12782121
+spring.datasource.password=Uqghs1AGuL
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
 
 #Email Properties
 spring.mail.host=smtp.gmail.com
